--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,16 @@ derive_more = "0.99.5"
 
 oss_sdk = {path = "./oss_sdk", package = "oss_sdk"}
 
-bytes = "^0.5"
+bytes = "1.0"
 
-reqwest = { version = "0.10.4", features = ["blocking"] }
+reqwest = { version = "0.11.3", features = ["blocking"] }
 
-quick-xml = "0.18"
+quick-xml = "0.22"
+
+# socket2 = "0.4.0"
+rusoto_core = "0.46.0"
+rusoto_s3 = "0.46.0"
+rusoto_credential = "0.46.0"
+
+tokio = "1.5"
+rusoto_signature = "0.46.0"
