--- a/oss_sdk/Cargo.toml
+++ b/oss_sdk/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.10.4", features = ["blocking"] }
+reqwest = { version = "0.11", features = ["blocking"] }
 
-base64 = "0.12.1"
+base64 = "0.13"
 
 chrono = "0.4"
 
@@ -21,6 +21,6 @@ async-trait = "0.1"
 
 http = "0.2"
 
-bytes = "^0.5"
+bytes = "1.0"
 
-derive_more = "0.99.5"
+derive_more = "0.99"
